[package]
name = "replay_attack_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = {version = "0.29.0"}
egui_plot = {version = "0.29.0"}
eframe = {version = "0.29.0", features = ["persistence"]}
serde = {version = "1.0.210", features = ["derive"]}
bincode = {version = "1.3.3"}
ndarray = {version = "0.16.1", features = ["rayon", "serde"]}
soapysdr-sys ={version = "0.7.5"}
soapysdr = {version = "0.4.0"}